# Forradia

./: .cspell.json  .gitignore  CMakeLists.txt  LICENSE  README.md
src/game/: CMakeLists.txt  CMakeSettings.json  CommonExternal.h  Main.cpp
src/game/engine/: CGameLoop.cpp  CImageGraphics.cpp  CImageGraphics.h  CModelGraphics.cpp  CModelGraphics.h  CPaintGraphics.h  CPlayer.cpp  CPlayer.h  CTextGraphics.cpp  CTextGraphics.h  F_GameLoop.cpp  F_GameLoop.h  F_ImageGraphics.cpp  F_ImageGraphics.h  F_ModelGraphics.cpp  F_ModelGraphics.h  F_MouseHandler.cpp  F_MouseHandler.h  F_PaintGraphics.cpp  F_PaintGraphics.h  F_Player.cpp  F_Player.h  F_TextGraphics.cpp  F_TextGraphics.h
src/game/framework/: CGuiWindowBase.cpp  CGuiWindowBase.h  CInventory.cpp  CInventory.h  CObjectsContent.cpp  CObjectsContent.h  CScenesCollection.h  CraftRecipe.h  F_Actor.cpp  F_Actor.h  F_GuiWindowBase.cpp  F_GuiWindowBase.h  F_IMapGenerator.h  F_Inventory.cpp  F_Inventory.h  F_ObjectDescription.h  F_ObjectsContent.cpp  F_ObjectsContent.h  F_SceneBase.h  F_ScenesCollection.cpp  F_ScenesCollection.h  GuiWindowBase.cpp  GuiWindowBase.h  IMapGenerator.h  SceneBase.h  TextRect.h  Timer.cpp  Timer.h  cGuiWindowBase.cpp  cGuiWindowBase.h  cObjectsContent.cpp  cObjectsContent.h  cRandom.cpp  cRandom.h  cSceneBase.h  cScenesCollection.cpp  cScenesCollection.h  cTextRect.h  iMapGenerator.h
src/game/framework/actor/: F_Actor.cpp  F_Actor.h  cActor.cpp
src/game/implementation/: CGameInstance.cpp  F_GameInstance.cpp  F_GameInstance.h  GameInstance.cpp  GameInstance.h  cGameInstance.cpp  cGameInstance.h
(+851 files in other folders)
